refactor: optimizar el uso de streams en los adaptadores de repositorio y agregar anotaciones de transacción