@@ -7,10 +7,10 @@ import com.ntt.challenge.bankapp.infrastructure.persistence.entity.CustomerEntit
 import com.ntt.challenge.bankapp.infrastructure.repository.CustomerJpaRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -19,25 +19,29 @@ public class CustomerRepositoryAdapter implements CustomerRepository {
     private final CustomerJpaRepository customerJpaRepository;
 
     @Override
+    @Transactional(readOnly = true)
     public List<Customer> findAll() {
         return customerJpaRepository.findAll().stream()
                 .map(CustomerEntityMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Optional<Customer> findById(Long id) {
         return customerJpaRepository.findById(id)
                 .map(CustomerEntityMapper::toDomain);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Optional<Customer> findByIdentification(String identification) {
         return customerJpaRepository.findByIdentification(identification)
                 .map(CustomerEntityMapper::toDomain);
     }
 
     @Override
+    @Transactional
     public Customer save(Customer customer) {
         CustomerEntity entity = CustomerEntityMapper.toEntity(customer);
         CustomerEntity saved = customerJpaRepository.save(entity);
@@ -45,6 +49,7 @@ public class CustomerRepositoryAdapter implements CustomerRepository {
     }
 
     @Override
+    @Transactional
     public void deleteById(Long id) {
         customerJpaRepository.deleteById(id);
     }
